# otlp-logger

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  logs.rs  metrics.rs  resource.rs  trace.rs
tests/: collector.rs  init-logging.rs  init-otlp.rs  jaeger.rs  override-level.rs  override-metrics.rs
