[package]
name = "otlp-logger"
version = "0.6.2"
edition = "2024"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
license = "Apache-2.0"
keywords = ["logging", "tracing", "opentelemetry", "otlp"]
description = "A simple convenience crate to configure an OpenTelemetry otlp endpoint with Tokio Tracing."
repository = "https://github.com/fdeantoni/otlp-logger"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.32.1"
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental" ] }
opentelemetry-appender-tracing = "0.31.1"
anyhow = "1.0.100"
thiserror = "2.0.18"
derive_builder = "0.20.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt","macros"] }
tracing = "0.1"
testcontainers = "0.26.3"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde_json = "1.0.149"